# esp32-ili9341

./: .gitignore  CMakeLists.txt  ESP32_TTGO_T4_V13.info  Makefile  README.md  partitions.csv  sdkconfig.defaults
components/ssd1306/: CMakeLists.txt
components/ssd1306/src/: ssd1306_1bit.c
components/ssd1306/src/lcd/: lcd_ili9341.c
components/ssd1306/src/ssd1306_hal/esp/: platform.c
main/: CMakeLists.txt  app_main.cpp  app_main.h
